# svg-to-icons

./: Cargo.toml  README.md
src/: lib.rs  main.rs
