[package]
name = "svg-to-icons"
version = "0.1.3"
edition = "2024"
description = "A tool to convert SVG to icon formats (ICO, ICNS, PNGs)."
license = "MIT"  
repository = "https://github.com/niminypiminy/svg-to-icons"  

[dependencies]
resvg = "0.47.0" # Adjust to the latest version
tiny-skia = "0.12.0" # Compatible with resvg
usvg = "0.47.0" # For SVG parsing
ico = "0.5.0"   # for ICO file creation
image = "0.25.10" # for decoding PNG to get dimensions
clap = { version = "4.5.17", features = ["derive"] }  # For CLI args

[[bin]]
name = "cargo-svgtoicons"
path = "src/main.rs"
