[package]
name = "svg-to-icons"
version = "0.1.3"
edition = "2024"
description = "A tool to convert SVG to icon formats (ICO, ICNS, PNGs)."
license = "MIT"  
repository = "https://github.com/niminypiminy/svg-to-icons"  

[dependencies]
resvg = "0.47.0" 
tiny-skia = "0.12.0" 
usvg = "0.47.0" 
ico = "0.5.0"  
image = "0.25.10" 
clap = { version = "4.5.17", features = ["derive"] } 

[[bin]]
name = "cargo-svgtoicons"
path = "src/main.rs"
